--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@ body {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     max-width: 302px;
+    background-size: cover;
+    height: 100dvh;
+
 }
 
 label {
